syntax = "proto3";

package com.road.yishi.proto.vip;

message OpenGiftReq {
  int32 type = 1;
  int32 grade = 2;
}
